Fix: Wait spinner on directory not centered

--- a/src/app/gallery/gallery.component.scss
+++ b/src/app/gallery/gallery.component.scss
@@ -5,6 +5,7 @@
 }
 
 .horizontal-gutter {
+    text-align: center;
     margin: 6px;
 }
 
